allow fetching block height for different chains
this is a preparation for the full-blown fork support, currently only BTC is supported (and hardcoded)